--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<h1>Welcome to Accio Jobs!</h1>
+		<hr>
+	<img src="https://unsplash.com/photos/gyIRjKPXupE" height=300px></img>
+	<p>5 software program developer profession paths</p>
+		<ul>
+			<li>Cloud development</li>
+			<li>Desktop development</li>
+			<li>Video Sport development</li>
+			<li>Mobile development</li>
+		</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
