--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Welcome to Accio Jobs!</h1>
 		<hr>
-	<img src="https://unsplash.com/photos/gyIRjKPXupE" height="300 px"></img>
+	<img src="https://unsplash.com/photos/gyIRjKPXupE" height="300"></img>
 	<p>5 software program developer profession paths</p>
 		<ul>
 			<li>Cloud development</li>
